# zephyr-grbl

./: .gitignore  .gitmodules  CMakeLists.txt  NOTES.md  README.md  TESTING.md  TODO.md  prj.conf  zephyr-grbl-plotter2.code-workspace
boards/: native_posix.conf  nucleo_f446re.overlay  nucleo_h743zi.overlay  nucleo_h753zi.conf  nucleo_h753zi.overlay  nucleo_l476rg.overlay
boards/arm/plotter_f405rg/: Kconfig.board  Kconfig.defconfig  board.cmake  plotter_f405rg.dts  plotter_f405rg.yaml  plotter_f405rg_defconfig
boards/arm/stm32f746g_disco/: stm32f746g_disco.dts
fonts/: LICENSE-FONTS.md
freecad/: 17HS4401.FCStd  17HS4401.FCStd1  body3.3mf  body3.stl  carriage-bottom.3mf  carriage-bottom.stl  carriage-top-quarter.stl  carriage-top.3mf  carriage-top.stl  carrier.3mf  east-supports.3mf  gt2.FCStd  gt2.FCStd1  knob.stl  misc.FCStd  misc.FCStd1  motor-attachment.3mf  motor-attachment.stl  nema17.FCStd  nema17.FCStd1  north-attachment.3mf  north-attachment.stl  pcb.FCStd  pcb.FCStd1  pen-holder-compact-ModelSliderA.stl  pen-holder-compact-ModelSouth attachment body.stl  pen-holder-compact.FCStd  pen-holder-compact.FCStd1  pen-holder.FCStd  pen-holder.FCStd1  plotter-dag-ModelEast attachment body.stl  plotter-dag-ModelSlice0.stl  plotter-dag-ModelSlice1.stl  plotter-dag-ModelStand.stl  plotter-dag-ModelStand001 (display).stl  plotter-dag-ModelStand002 (drivers).stl  plotter.FCStd1  sliderA.stl  sliderB.stl  south-attachment.3mf  (+7 more)
misc/: misc.ioc
misc/sd-card-logs/: 446.csv  476.csv  sd-card-comms.ods
modules/hw_timer/dts/bindings/hw_timer/: st,stm32-hw-timer.yaml
modules/hw_timer/zephyr/: CMakeLists.txt  Kconfig  hw_timer.h  hw_timer_stm32.c
pcb/plotter/: motors.kicad_sch  plotter.kicad_pcb  plotter.kicad_prl  plotter.kicad_pro  plotter.kicad_sch
samples/: A.ngc  circle.nc  circle2.nc  lukasz.ngc  only-g0.nc  output.ngc  sphere.ngc  spirala.gcode
src/: coolant_control_stub.c  display.cc  display.h  eeprom_stub.c  exception.h  grblState.cc  grblState.h  limits_stub.c  main.c  main.cc  mcu-peripherals.cc  mcu-peripherals.h  probe_stub.c  sdCard.cc  sdCard.h  spindle_control_stub.c  stepper-drivers.cc  stepper-drivers.h  stepperDriverSettings.cc  zephyrGrblPeripherals.cc  zephyrGrblPeripherals.h
test/: README.md
test/unit-tests/: 00regexps.cc  CMakeLists.txt
